<?xml version="1.0"?>
<package format="2">
    <name>fixposition_odometry_converter</name>
    <version>1.0.0</version>
    <description>Conversion from Odometry messages to Fixposition's Speed input</description>

    <maintainer email="info@fixposition.com">Fixposition AG</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>fixposition_driver_ros1</depend>
</package>
