<?xml version="1.0"?>
<package format="2">
    <name>fixposition_odometry_converter_ros1</name>
    <version>1.0.0</version>
    <description>Conversion from odometry messages to Fixposition's speed input</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>fixposition_driver_lib</depend>
    <depend>fixposition_driver_msgs</depend>
</package>
