<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fixposition_tf_publisher_ros2</name>
  <version>0.0.0</version>
  <description>A pkg to convert fixposition tf to Nav2 tf</description>
  <maintainer email="ramanab@bosonmotors.com">boson</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Core dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>

  <!-- Dependencies for transforms and localization -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- Custom message dependencies -->
  <build_depend>fixposition_driver_ros2</build_depend>
  <exec_depend>fixposition_driver_ros2</exec_depend>


  <!-- External Python dependencies -->
  <exec_depend>python3-pyproj</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
