<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtcm_msgs</name>
  <version>1.1.6</version>
  <description>The rtcm_msgs package contains messages related to data in the RTCM format.</description>
  <maintainer email="tilk@tilk.eu">Marek Materzok</maintainer>
  <license>BSD</license>
  <author email="tilk@tilk.eu">Marek Materzok</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend>ros_environment</build_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">builtin_interfaces</build_depend>

  <depend>std_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
